adding camera and electronics files

--- a/level1/camera/camera.ipynb
+++ b/level1/camera/camera.ipynb
@@ -416,7 +416,7 @@
     }
    ],
    "source": [
-    "# Create  dataframe for gopro \n",
+    "# Create  dataframe for sony \n",
     "sony_df = cleaned_df.where(col('product_title').like(\"%Sony%\"))\n",
     "sony_df.show(20)"
    ]
@@ -466,7 +466,7 @@
     }
    ],
    "source": [
-    "# Create  dataframe for gopro \n",
+    "# Create  dataframe for nikon\n",
     "nikon_df = cleaned_df.where(col('product_title').like(\"%Nikon%\"))\n",
     "nikon_df.show(20)"
    ]
@@ -516,7 +516,7 @@
     }
    ],
    "source": [
-    "# Create  dataframe for gopro \n",
+    "# Create  dataframe for canon\n",
     "canon_df = cleaned_df.where(col('product_title').like(\"%Canon%\"))\n",
     "canon_df.show(20)"
    ]
